--- a/text/acknowledgements.tex
+++ b/text/acknowledgements.tex
@@ -2,14 +2,30 @@
 
 This is where you thank your advisor, colleagues, and family and friends.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum feugiat et est at accumsan. Praesent sed elit mattis, congue mi sed, porta ipsum. In non ullamcorper lacus. Quisque volutpat tempus ligula ac ultricies. Nam sed erat feugiat, elementum dolor sed, elementum neque. Aliquam eu iaculis est, a sollicitudin augue. Cras id lorem vel purus posuere tempor. Proin tincidunt, sapien non dictum aliquam, ex odio ornare mauris, ultrices viverra nisi magna in lacus. Fusce aliquet molestie massa, ut fringilla purus rutrum consectetur. Nam non nunc tincidunt, rutrum dui sit amet, ornare nunc. Donec cursus tortor vel odio molestie dignissim. Vivamus id mi erat. Duis porttitor diam tempor rutrum porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed condimentum venenatis consectetur. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-
-Aenean sit amet lectus nec tellus viverra ultrices vitae commodo nunc. Mauris at maximus arcu. Aliquam varius congue orci et ultrices. In non ipsum vel est scelerisque efficitur in at augue. Nullam rhoncus orci velit. Duis ultricies accumsan feugiat. Etiam consectetur ornare velit et eleifend.
-
-Suspendisse sed enim lacinia, pharetra neque ac, ultricies urna. Phasellus sit amet cursus purus. Quisque non odio libero. Etiam iaculis odio a ex volutpat, eget pulvinar augue mollis. Mauris nibh lorem, mollis quis semper quis, consequat nec metus. Etiam dolor mi, cursus a ipsum aliquam, eleifend venenatis ipsum. Maecenas tempus, nibh eget scelerisque feugiat, leo nibh lobortis diam, id laoreet purus dolor eu mauris. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla eget tortor eu arcu sagittis euismod fermentum id neque. In sit amet justo ligula. Donec rutrum ex a aliquet egestas.
 
 \subsection*{Institutional}
 
 If you want to separate out your thanks for funding and institutional support, I don't think there's any rule against it.  Of course, you could also just remove the subsections and do one big traditional acknowledgement section.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut luctus tempor ex at pretium. Sed varius, mauris at dapibus lobortis, elit purus tempor neque, facilisis sollicitudin felis nunc a urna. Morbi mattis ante non augue blandit pulvinar. Quisque nec euismod mauris. Nulla et tellus eu nibh auctor malesuada quis imperdiet quam. Sed eget tincidunt velit. Cras molestie sem ipsum, at faucibus quam mattis vel. Quisque vel placerat orci, id tempor urna. Vivamus mollis, neque in aliquam consequat, dui sem volutpat lorem, sit amet tempor ipsum felis eget ante. Integer lacinia nulla vitae felis vulputate, at tincidunt ligula maximus. Aenean venenatis dolor ante, euismod ultrices nibh mollis ac. Ut malesuada aliquam urna, ac interdum magna malesuada posuere.
+\subsection*{Previously published material}
+I feel deeply grateful for having had the chance to work with talented and dedicated
+collaborators on several projects during the course of my DPhil. Some of the work
+presented in this thesis has been developed with the input of such collaborators,
+and has resulted in peer-reviewed publications and article pre-prints. As scientific
+ideas and output are often generated collaboratively, I use the pronouns ``I'' and
+``we'' inter-changeably in this thesis.
+
+Throughout the thesis, any data processing or quality control steps that have been
+performed by others, or for which I amended scripts originally produced by others,
+are acknowledged as such. The work presented in this thesis, including all the code
+and analyses to generate text, figures, and tables are a result of my original work,
+except as specified in the text.
+
+Chapters 2, 3, and 5 are adapted from sections of: my first-authored pre-print
+The genetic architecture of changes in adiposity during adulthood1 and my firstauthored
+journal publication Obesity and risk of female reproductive conditions:
+A Mendelian Randomisation Study2. I have received written permission from
+editors of the respective journals to reproduce published figures in part or in full
+in my thesis. I have also received written confirmation from all co-authors of
+each publication and my supervisor, Professor Cecilia Lindgren, to reuse parts
+of previously published text in my thesis.
